--- a/application/admin/view/user/user/edit.html
+++ b/application/admin/view/user/user/edit.html
@@ -1,144 +1,175 @@
-<form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
-
-    <div class="form-group">
-        <label for="c-group_id" class="control-label col-xs-12 col-sm-2">{:__('Group')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            {$groupList}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-username" class="control-label col-xs-12 col-sm-2">{:__('Username')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-username" data-rule="required" class="form-control" name="row[username]" type="text" value="{$row.username}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-nickname" class="control-label col-xs-12 col-sm-2">{:__('Nickname')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-nickname" data-rule="required" class="form-control" name="row[nickname]" type="text" value="{$row.nickname}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-password" class="control-label col-xs-12 col-sm-2">{:__('Password')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-password" data-rule="" class="form-control" name="row[password]" type="text" value="" placeholder="{:__('Leave password blank if dont want to change')}" autocomplete="new-password" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-email" class="control-label col-xs-12 col-sm-2">{:__('Email')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-email" data-rule="" class="form-control" name="row[email]" type="text" value="{$row.email}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-mobile" class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-mobile" data-rule="" class="form-control" name="row[mobile]" type="text" value="{$row.mobile}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-avatar" class="control-label col-xs-12 col-sm-2">{:__('Avatar')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <div class="input-group">
-                <input id="c-avatar" data-rule="" class="form-control" size="50" name="row[avatar]" type="text" value="{$row.avatar}">
-                <div class="input-group-addon no-border no-padding">
-                    <span><button type="button" id="plupload-avatar" class="btn btn-danger plupload" data-input-id="c-avatar" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="false" data-preview-id="p-avatar"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
-                    <span><button type="button" id="fachoose-avatar" class="btn btn-primary fachoose" data-input-id="c-avatar" data-mimetype="image/*" data-multiple="false"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
-                </div>
-                <span class="msg-box n-right" for="c-avatar"></span>
+{extend name="layout/default" /}
+{block name="content"}
+<body>
+<!--<div class="layui-container lay_top">-->
+<!--<div class="layui-row layui-col-space30">-->
+<div class="body-form">
+    <form class="layui-form" action="{:url('admin/user.user/edit','',false)}" tableid="tableReload" method="post" id="formRule" lay-filter="rule">
+        <table class="layui-table" lay-skin="line" lay-size="sm">
+            <colgroup>
+                <col class="tdleft" width="10%">
+                <col class="tdright" width="40%">
+                <col class="tdleft" width="10%">
+                <col class="tdright" width="40%">
+            </colgroup>
+            <tbody>
+            <tr>
+                <td class="tdleft">角色<span class="tips">*</span></td>
+                <td class="tdright">
+                    {:build_select('group_id', $groupdata, $list['group_id'], ['class'=>'form-control selectpicker', 'multiple'=>'', 'lay-verify'=>'required', 'xm-select' => 'select'])}
+                    <input type="hidden" name="id" value="{$list['id']}">
+                </td>
+                <td class="tdleft">{:__('Username')}<span class="tips">*</span></td>
+                <td class="tdright">
+                    <input type="text" name="username" data-rule="required;username" lay-verify="username" autocomplete="off" value="{$list['username']}" placeholder="登录账号" class="layui-input">
+                    <input type="hidden" name="id" lay-verify="id" value="{$list['id']}">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Nickname')}</td>
+                <td class="tdright">
+                    <input id="nickname" data-rule="required" name="nickname" placeholder="昵称" value="{$list['nickname']}" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Email')}</td>
+                <td class="tdright">
+                    <input type="email" name="email" data-rule="{required;email}" placeholder="邮箱" value="{$list['email']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Password')}</td>
+                <td class="tdright">
+                    <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Confirm password')}</td>
+                <td class="tdright">
+                    <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Mobile')}</td>
+                <td class="tdright">
+                    <input id="mobile" name="mobile" data-rule="" placeholder="邮箱" value="{$list['mobile']}" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Level')}</td>
+                <td class="tdright">
+                    <input id="level" name="level" data-rule="" placeholder="" value="{$list['level']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Gender')}</td>
+                <td class="tdright">
+                    {:build_radios('gender',['1'=>__('Male'), '0'=>__('Female')], $list['gender'])}
+                </td>
+                <td class="tdleft">{:__('Birthday')}</td>
+                <td class="tdright">
+                    <input id="birthday" name="birthday" data-rule="" placeholder="" value="{$list['birthday']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Successions')}</td>
+                <td class="tdright">
+                    <input id="successions" name="successions" data-rule="" placeholder="" value="{$list['successions']}" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Maxsuccessions')}</td>
+                <td class="tdright">
+                    <input id="maxsuccessions" name="maxsuccessions" data-rule="" placeholder="" value="{$list['maxsuccessions']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Prevtime')}</td>
+                <td class="tdright">
+                    <input id="prevtime" name="prevtime" data-rule="" placeholder="" value="{$list['prevtime']}" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Logintime')}</td>
+                <td class="tdright">
+                    <input id="logintime" name="logintime" data-rule="" placeholder="" value="{$list['logintime']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Loginip')}</td>
+                <td class="tdright">
+                    <input id="loginip" name="loginip" data-rule="" placeholder="" value="{$list['loginip']}" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Loginfailure')}</td>
+                <td class="tdright">
+                    <input id="loginfailure" name="loginfailure" data-rule="" placeholder="" value="{$list['loginfailure']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Joinip')}</td>
+                <td class="tdright">
+                    <input id="joinip" name="joinip" data-rule="" placeholder="" value="{$list['joinip']}" autocomplete="off" class="layui-input">
+                </td>
+                <td class="tdleft">{:__('Jointime')}</td>
+                <td class="tdright">
+                    <input id="jointime" name="jointime" data-rule="" placeholder="" value="{$list['jointime']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">{:__('Status')}</td>
+                <td class="tdright">
+                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="layui-form-item footer-form">
+            <div class="footer footer-common">
+                <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+                <a href="{:url($return_url)}"><div type="reset" style="margin-left: 10px" class="layui-btn layui-btn-sm btn-embossed go-back">返回</div></a>
             </div>
-            <ul class="row list-inline plupload-preview" id="p-avatar"></ul>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="c-level" class="control-label col-xs-12 col-sm-2">{:__('Level')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-level" data-rule="required" class="form-control" name="row[level]" type="number" value="{$row.level}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-gender" class="control-label col-xs-12 col-sm-2">{:__('Gender')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[gender]', ['1'=>__('Male'), '0'=>__('Female')], $row['gender'])}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-birthday" class="control-label col-xs-12 col-sm-2">{:__('Birthday')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-birthday" data-rule="" class="form-control datetimepicker" data-date-format="YYYY-MM-DD" data-use-current="true" name="row[birthday]" type="text" value="{$row.birthday}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-bio" class="control-label col-xs-12 col-sm-2">{:__('Bio')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-bio" data-rule="" class="form-control" name="row[bio]" type="text" value="{$row.bio}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-score" class="control-label col-xs-12 col-sm-2">{:__('Score')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-score" data-rule="required" class="form-control" name="row[score]" type="number" value="{$row.score}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-successions" class="control-label col-xs-12 col-sm-2">{:__('Successions')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-successions" data-rule="required" class="form-control" name="row[successions]" type="number" value="{$row.successions}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-maxsuccessions" class="control-label col-xs-12 col-sm-2">{:__('Maxsuccessions')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-maxsuccessions" data-rule="required" class="form-control" name="row[maxsuccessions]" type="number" value="{$row.maxsuccessions}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-prevtime" class="control-label col-xs-12 col-sm-2">{:__('Prevtime')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-prevtime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[prevtime]" type="text" value="{$row.prevtime|datetime}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-logintime" class="control-label col-xs-12 col-sm-2">{:__('Logintime')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-logintime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[logintime]" type="text" value="{$row.logintime|datetime}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-loginip" class="control-label col-xs-12 col-sm-2">{:__('Loginip')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-loginip" data-rule="required" class="form-control" name="row[loginip]" type="text" value="{$row.loginip}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-loginfailure" class="control-label col-xs-12 col-sm-2">{:__('Loginfailure')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-loginfailure" data-rule="required" class="form-control" name="row[loginfailure]" type="number" value="{$row.loginfailure}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-joinip" class="control-label col-xs-12 col-sm-2">{:__('Joinip')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-joinip" data-rule="required" class="form-control" name="row[joinip]" type="text" value="{$row.joinip}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-jointime" class="control-label col-xs-12 col-sm-2">{:__('Jointime')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-jointime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[jointime]" type="text" value="{$row.jointime|datetime}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="content" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')], $row['status'])}
-        </div>
-    </div>
-    <div class="form-group layer-footer">
-        <label class="control-label col-xs-12 col-sm-2"></label>
-        <div class="col-xs-12 col-sm-8">
-            <button type="submit" class="btn btn-success btn-embossed disabled">{:__('OK')}</button>
-            <button type="reset" class="btn btn-default btn-embossed">{:__('Reset')}</button>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
+<!--</div>-->
+<!--</div>-->
+{/block}
+{block name="script"}
+<script>
+    layui.config({
+        base: "__STATIC__/", //静态资源所在路径
+        skin: 'layui-layer-we'
+    }).extend({
+        index: 'lib/index', //主入口模块
+        formSelects: 'formSelects-v4'
+    }).link(
+        '__STATIC__/style/formSelects-v4.css'
+    ).
+    link(
+        " __STATIC__/style/jquery.validator.css"
+    ).
+    use(['jquery','index','laydate','formSelects','formValidator'], function(){
+        var admin = layui.admin
+            ,$ = layui.$
+            ,table = layui.table
+            ,laydate = layui.laydate
+            ,formSelects = layui.formSelects
+            ,formValidator = layui.formValidator;
+        //监听提交
+
+        laydate.render({
+            elem: '#prevtime' //指定元素
+            ,type: 'datetime'
+        });
+        laydate.render({
+            elem: '#birthday' //指定元素
+            ,type: 'datetime'
+        });
+        laydate.render({
+            elem: '#logintime' //指定元素
+            ,type: 'datetime'
+        });
+        laydate.render({
+            elem: '#jointime' //指定元素
+            ,type: 'datetime'
+        });
+        /**
+         * 绑定表单事件
+         */
+        formValidator.api.bindevent($("form#formRule"));
+    });
+</script>
+</body>
+</html>
+{/block}
