--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -109,6 +109,7 @@
          */
         weTable.api.init({
             table : "rule",
+            is_display:true,
             tableid : "tableReload",
             form:$("form#formRule"),
             tableCommon: tableCommon,
