--- a/application/admin/view/user/group/index.html
+++ b/application/admin/view/user/group/index.html
@@ -15,11 +15,6 @@
 </div>
 <!--工具栏-->
 {:build_toolbar('toolbar','refresh,add')}
-<!--<script type="text/html" id="toolbar">-->
-<!--<div class="layui-btn-container">-->
-<!--<button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i> 添加角色</button>-->
-<!--</div>-->
-<!--</script>-->
 <!--工具栏-->
 
 <!--状态-->
@@ -62,15 +57,17 @@
             elem: '#group'
             ,skin:'line'
             ,toolbar: '#toolbar'
-            ,url:"{:url('Admin/auth.group/index')}"
+            ,url:"{:url('Admin/user.group/index')}"
             ,id: 'tableReload'
             ,defaultToolbar: []//'filter', 'print', 'exports'
             ,loading:true
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
-                ,{field:'name', title: '角色名称', sort: true}
-                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true}
-                ,{field:'createtime', title: '操作时间', minWidth: 150}
+                ,{field:'id', title: 'ID', sort: true}
+                ,{field:'name', title: "{:__('Name')}", sort: true}
+                ,{field:'status', title: "{:__('Status')}",templet: '#switchStatus', sort: true}
+                ,{field:'createtime', title: "{:__('Createtime')}", minWidth: 150}
+                ,{field:'updatetime', title: "{:__('Updatetime')}", minWidth: 150}
                 ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:200}
             ]]
             ,done: function(res, curr, count){
@@ -87,8 +84,8 @@
             table : "group",
             tableid : "tableReload",
             extend : {
-                "add_url": "{:url('admin/auth.group/edit','',false)}",
-                "edit_url": "{:url('admin/auth.group/edit','',false)}/ids/",
+                "add_url": "{:url('admin/user.group/edit','',false)}",
+                "edit_url": "{:url('admin/user.group/edit','',false)}/ids/",
             }
         });
 
@@ -96,67 +93,6 @@
          * 绑定监听事件
          * */
         weTable.api.bindevent();
-
-
-//        //监听行工具事件
-//        table.on('tool(group)', function(obj){
-//            var data = obj.data;
-//             if(obj.event === 'edit') {
-//                var url = "{:url('admin/auth.group/edit','',false)}/ids/" + data.id;
-//                we.api.open(url,'编辑');
-//            }
-//        });
-//
-//        //头工具栏事件
-//        table.on('toolbar(group)', function(obj){
-//            if(obj.event == 'add') {
-//                var url = "{:url('admin/auth.group/add','',false)}";
-//                we.api.open(url, '添加角色');
-//            }
-////            var checkStatus = table.checkStatus(obj.config.id);
-////            switch(obj.event){
-////                case 'add':
-////                    var data = checkStatus.data;
-////                    layer.alert(JSON.stringify(data));
-////                    break;
-////            };
-//        });
-
-        /*form.on('submit(formRule)', function(data){
-         var frame = layer.getChildFrame('html');
-         frame.find("[type=submit]").removeClass('disabled');
-         var name = frame.find("input[name=name]").val();
-         var layerfooter = frame.find(".layer-footer");
-         var formdata = frame.find("form").serializeArray();
-
-         var d = {};
-         var t = frame.find("form").serializeArray();
-         $.each(t, function () {
-         d[this.name] = this.value;
-         });
-
-         var ids = frame.find("input[name=ids]").val();
-         var url = "{:url('admin/auth.group/edit','',false)}/ids/" + ids;
-         $.ajax({
-         "url":"{:url('admin/auth.group/edit','',false)}/ids/" + ids,
-         "cache":false,
-         "data":formdata,
-         "async":true,
-         "type":'post',
-         "success":function(data){
-         layer.msg(data.info);
-         layer.closeAll();
-         table.reload('testReload', {});
-         },
-         "error":function (data) {
-         layer.msg(data.info);
-         }
-         });
-         return false;
-
-         });*/
-
-
     });
 
 </script>
