去掉搜索框

--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -114,7 +114,7 @@
             form:$("form#formRule"),
             tableCommon: tableCommon,
             extend : {
-                "add_url": "{:url('admin/user.user/add','',false)}",
+                "add_url": "{:url('admin/user.user/edit','',false)}",
                 "edit_url": "{:url('admin/user.user/edit','',false)}/ids/",
                 "view_url": "{:url('admin/user.user/view','',false)}/ids",
                 "del_url": "{:url('admin/user.user/del','',false)}",
