--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -116,7 +116,7 @@
             extend : {
                 "add_url": "{:url('admin/user.user/edit','',false)}",
                 "edit_url": "{:url('admin/user.user/edit','',false)}/ids/",
-                "view_url": "{:url('admin/user.user/view','',false)}/ids",
+                "view_url": "{:url('admin/user.user/view','',false)}/ids/",
                 "del_url": "{:url('admin/user.user/del','',false)}",
                 "export_url" : "{:url('admin/user.user/index','',false)}"
             }
