--- a/application/admin/view/user/rule/index.html
+++ b/application/admin/view/user/rule/index.html
@@ -109,8 +109,8 @@
             is_display:true,
             extend : {
                 "add_url": "{:url('admin/user.rule/edit','',false)}",
-                "edit_url": "{:url('admin/user.rule/edit','',false)}/id/",
-//                "view_url": "{:url('admin/auth.rule/view','',false)}/id/",
+                "edit_url": "{:url('admin/user.rule/edit','',false)}/ids/",
+//                "view_url": "{:url('admin/auth.rule/view','',false)}/ids/",
                 "del_url": "{:url('admin/user.rule/del','',false)}",
                 "export_url": "{:url('admin/user.rule/export','',false)}",
             }
