--- a/application/admin/view/user/rule/edit.html
+++ b/application/admin/view/user/rule/edit.html
@@ -1,52 +1,97 @@
-<form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
+{extend name="layout/default" /}
+{block name="content"}
+<body>
+<!--<div class="layui-container lay_top">-->
+<!--<div class="layui-row layui-col-space30">-->
+<div class="body-form">
+    <form class="layui-form" action="{:url('admin/user.rule/edit','',false)}" tableid="tableReload" treegird="true" method="post" lay-filter="rule" id="formRule">
+        <table class="layui-table" lay-skin="line" lay-size="sm">
+            <colgroup>
+                <col class="tdleft" width="30%">
+                <col class="tdright">
+            </colgroup>
+            <tbody>
+            <tr>
+                <td class="tdleft">菜单<span class="tips">*</span></td>
+                <td class="tdright">
+                    <input type="checkbox" name="ismenu" lay-skin="switch" lay-text="是|否" {$list['ismenu'] == 1? 'checked' : ''}>
+                    <input type="hidden" name="id" value="{$list['id']}">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">父级</td>
+                <td class="tdright">
+                    {:build_select('pid', $ruledata, $list['pid'], ['class'=>'form-control', 'required'=>''])}
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">规则</td>
+                <td class="tdright">
+                    <input type="text" name="name" data-rule="required;" autocomplete="off" value="{$list['name']}" placeholder="规则名称" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">标题</td>
+                <td class="tdright">
+                    <input type="title" name="title"  data-rule="required" placeholder="标题" value="{$list['title']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">权重</td>
+                <td class="tdright">
+                    <input type="weigh" name="weigh" data-rule="required;integer(+0)" placeholder="权重" value="{$list['weigh']}" autocomplete="off" class="layui-input">
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">状态</td>
+                <td class="tdright">
+                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
+                </td>
+            </tr>
+            <tr>
+                <td class="tdleft">备注</td>
+                <td class="tdright">
+                    <textarea placeholder="备注" class="layui-textarea" name="remark">{$list['remark']}</textarea>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="layui-form-item footer-form">
+            <div class="footer">
+                <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+            </div>
+        </div>
+    </form>
+</div>
+<!--</div>-->
+<!--</div>-->
+{/block}
+{block name="script"}
+<script>
+    layui.config({
+        base: "__STATIC__/", //静态资源所在路径
+        skin: 'layui-layer-we'
+    }).extend({
+        index: 'lib/index' //主入口模块
+//        ,validator:'jquery.validator'
+//        ,zhCN:'zh-CN'
+    }).link(
+        '__STATIC__/style/jquery.validator.css'
+    ).link(
+        " __STATIC__/style/jquery.validator.css"
+    ).use(['jquery','index','formValidator'], function(){
+        var admin = layui.admin
+            ,$ = layui.$
+            ,table = layui.table
+            ,formValidator = layui.formValidator;
 
-    <div class="form-group">
-        <label for="content" class="control-label col-xs-12 col-sm-2">{:__('Ismenu')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[ismenu]', ['1'=>__('Yes'), '0'=>__('No')], $row['ismenu'])}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="pid" class="control-label col-xs-12 col-sm-2">{:__('Parent')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_select('row[pid]', $ruledata, $row['pid'], ['class'=>'form-control', 'required'=>''])}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-name" class="form-control" name="row[name]" type="text" placeholder="{:__('Controller/Action')}" value="{$row.name}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-title" class="control-label col-xs-12 col-sm-2">{:__('Title')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-title" class="form-control" name="row[title]" type="text" value="{$row.title}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="remark" class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <textarea class="form-control" id="remark" name="row[remark]">{$row.remark}</textarea>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-weigh" class="control-label col-xs-12 col-sm-2">{:__('Weigh')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-weigh" class="form-control" name="row[weigh]" type="number" value="{$row.weigh}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="content" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')], $row['status'])}
-        </div>
-    </div>
-    <div class="form-group layer-footer">
-        <label class="control-label col-xs-12 col-sm-2"></label>
-        <div class="col-xs-12 col-sm-8">
-            <button type="submit" class="btn btn-success btn-embossed disabled">{:__('OK')}</button>
-            <button type="reset" class="btn btn-default btn-embossed">{:__('Reset')}</button>
-        </div>
-    </div>
-</form>
+        /**
+         * 绑定表单事件
+         */
+        formValidator.api.bindevent($("form#formRule"));
+    });
+</script>
+</body>
+</html>
+{/block}
