--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -166,7 +166,7 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
-//            ,limit : 4
+            ,data:{'Search':"{:__('Search')}",'Reset':"{:__('Reset')}"}
             ,loading:true
             ,limit:10
             ,defaultToolbar: ['filter']//'filter', 'print', 'exports'
