--- a/application/admin/view/user/user/edit.html
+++ b/application/admin/view/user/user/edit.html
@@ -117,7 +117,7 @@
             <div class="footer footer-common">
                 <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
                 <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
-                <a href="{:url($return_url)}"><div type="reset" style="margin-left: 10px" class="layui-btn layui-btn-sm btn-embossed go-back">返回</div></a>
+                <a href="{:url($return_url)}"><div type="reset" style="margin-left: 10px" class="layui-btn layui-btn-sm btn-embossed go-back">{:__('Back')}</div></a>
             </div>
         </div>
     </form>
