--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -64,6 +64,7 @@
             ,id : 'tableReload'
             ,skin:'line'
             ,toolbar : '#toolbar'
+            ,data:{'Search':"{:__('Search')}",'Reset':"{:__('Reset')}"}
 //            ,limit : 4
             ,loading:true
             ,limit:10
@@ -83,12 +84,12 @@
 //                ,{field:'maxsuccessions', title: "{:__('maxsuccessions')}", excel_width:15}
                 ,{field:'email', title: "{:__('Email')}", excel_width:15, searchList:{type:'input',operate:'LIKE'}}
 //                ,{field:'status', title: '状态', excel_width:15,templet: '#switchStatus', sort: true, searchList:{type:'select',data:{$statusList},'operate':'='}}
-                ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:160}
+                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#actionbar', width:160}
             ]]
             ,page: {
-                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
-                ,first: false //不显示首页
-                ,last: false //不显示尾页
+                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip']
+                ,first: "首页" //不显示首页
+                ,last: "尾页" //不显示尾页
 
             }
             ,done: function(res, curr, count){
