--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -2,17 +2,17 @@
     <!-- 头部区域 -->
     <ul class="layui-nav layui-layout-left">
         <li class="layui-nav-item layadmin-flexible" lay-unselect>
-            <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
+            <a href="javascript:;" layadmin-event="flexible" title="">
                 <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
             </a>
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="javascript:;" target="_blank" title="前台">
+            <a href="javascript:;" target="_blank" title="{:__('Index')}">
                 <i class="layui-icon layui-icon-website"></i>
             </a>
         </li>
         <li class="layui-nav-item" lay-unselect>
-            <a href="javascript:;" layadmin-event="refresh" title="刷新">
+            <a href="javascript:;" layadmin-event="refresh" title="{:__('Refresh')}">
                 <i class="layui-icon layui-icon-refresh-3"></i>
             </a>
         </li>
@@ -20,7 +20,7 @@
     <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
 
         <li class="layui-nav-item" lay-unselect>
-            <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心">
+            <a lay-href="app/message/index.html" layadmin-event="message" lay-text="{:__('Message center')}">
                 <i class="layui-icon layui-icon-notice"></i>
 
                 <!-- 如果有新消息，则显示小圆点 -->
@@ -32,10 +32,10 @@
                 <i class="layui-icon layui-icon-delete"></i>
             </a>
             <dl class="layui-nav-child clearcache">
-                <dd><a href="javascript:;" data-type="all">一键清除缓存</a></dd>
-                <dd><a href="javascript:;" data-type="content">清除缓存内容</a></dd>
-                <dd><a href="javascript:;" data-type="template">清除模板缓存</a></dd>
-                <dd><a href="javascript:;" data-type="log">清除日志缓存</a></dd>
+                <dd><a href="javascript:;" data-type="all">{:__('Wipe all cache')}</a></dd>
+                <dd><a href="javascript:;" data-type="content">{:__('Wipe content cache')}</a></dd>
+                <dd><a href="javascript:;" data-type="template">{:__('Wipe template cache')}</a></dd>
+                <dd><a href="javascript:;" data-type="log">{:__('Wipe log cache')}</a></dd>
             </dl>
         </li>
 
@@ -59,10 +59,9 @@
                 <cite>{$admin.nickname}</cite>
             </a>
             <dl class="layui-nav-child">
-                <dd><a lay-href="{:url('profile/index')}">基本资料</a></dd>
-                <dd><a lay-href="{:url('profile/index')}">修改密码</a></dd>
-                <hr>
-                <dd style="text-align: center;"><a href="{:url('index/logout')}">退出</a></dd>
+                <dd><a lay-href="{:url('profile/index')}">{:__('Profile')}</a></dd>
+                <dd><a lay-href="{:url('profile/index')}">{:__('Change password')}</a></dd>
+                <dd><a href="{:url('index/logout')}">{:__('Logout')}</a></dd>
             </dl>
         </li>
 
