--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -2,7 +2,7 @@
 <div class="layui-side layui-side-menu">
     <div class="layui-side-scroll">
         <div class="layui-logo" lay-href="home/console.html">
-            <span>后台管理系统</span>
+            <span>{:__('Management system')}</span>
         </div>
 
         <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
