安全策略中英文

--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -11,10 +11,10 @@
             <!--<div class="layui-card-body">-->
                 <div class="" lay-filter="component-tabs-brief">
                     <ul class="tabpage" id="tabs">
-                        <li class="" id="li1"><a href="#" class="tab1">邮件配置</a></li>
-                        <li class="" id="li2"><a href="#" class="tab2">基础设置</a></li>
-                        <li class="" id="li3"><a href="#" class="tab3">常量配置</a></li>
-                        <li class="" id="li4"><a href="#" class="tab4">其他</a></li>
+                        <li class="" id="li1"><a href="#" class="tab1">{:__('Mail configuration')}</a></li>
+                        <li class="" id="li2"><a href="#" class="tab2">{:__('Basic Settings')}</a></li>
+                        <li class="" id="li3"><a href="#" class="tab3">{:__('Constant configuration')}</a></li>
+                        <li class="" id="li4"><a href="#" class="tab4">{:__('Other')}</a></li>
                     </ul>
                     <div class="contenttab" id="content">
                         <div class="layui-tab-item" id="tab1">
