--- a/application/admin/view/system/base_info.html
+++ b/application/admin/view/system/base_info.html
@@ -13,8 +13,8 @@
             <!--<div class="layui-card-body">-->
                 <div class="" lay-filter="component-tabs-brief">
                     <ul class="tabpage" id="tabs">
-                        <li class="" id="li1"><a href="#" class="tab1">系统信息</a></li>
-                        <li class="" id="li2"><a href="#" class="tab2">技术团队</a></li>
+                        <li class="" id="li1"><a href="#" class="tab1">{:__('System message')}</a></li>
+                        <li class="" id="li2"><a href="#" class="tab2">{:__('Technical team')}</a></li>
                     </ul>
                     <div class="contenttab" id="content">
                         <div class="layui-tab-item" id="tab1">
