--- a/application/admin/view/system/security.html
+++ b/application/admin/view/system/security.html
@@ -11,8 +11,8 @@
             <!--<div class="layui-card-body">-->
                 <div class="" lay-filter="component-tabs-brief">
                     <ul class="tabpage" id="tabs">
-                        <li class="" id="li1"><a href="#" class="tab1">用户秘密策略</a></li>
-                        <li class="" id="li2"><a href="#" class="tab2">防暴力破解</a></li>
+                        <li class="" id="li1"><a href="#" class="tab1">{:__('Secret policy')}</a></li>
+                        <li class="" id="li2"><a href="#" class="tab2">{:__('Anti-violence crack')}</a></li>
                     </ul>
                     <div class="contenttab" id="content">
                         <div class="layui-tab-item" id="tab1">
@@ -24,7 +24,7 @@
                                     </colgroup>
                                     <tbody>
                                     <tr>
-                                        <td class="tdleft">请选择用户秘密策略：</td>
+                                        <td class="tdleft">{:__('Please select secret policy')}：</td>
                                         <td class="tdright">
                                             {:build_radios('strategy', ['1'=>__('Password strategy1'), '2'=>__('Password strategy2'), '3'=>__('Password strategy3')],$Password_strategy_type['passwd_complexity'])}
                                         </td>
@@ -62,43 +62,43 @@
                                     </colgroup>
                                     <tbody>
                                         <tr>
-                                            <td class="tdleft">图形验证码验证：</td>
+                                            <td class="tdleft">{:__('Verification code verification')}：</td>
                                             <td class="tdright">
-                                                {:build_radios('login_captcha', ['1'=>__('on'),'0'=>__('off')],$login_captcha['login_captcha'])}
+                                                {:build_radios('login_captcha', ['1'=>__('On'),'0'=>__('Off')],$login_captcha['login_captcha'])}
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td class="tdleft">密码错误次数限制：</td>
+                                            <td class="tdleft">{:__('Password error limit')}：</td>
                                             <td class="tdright">
-                                                {:build_radios('login_limit', ['1'=>__('on'),'0'=>__('off')], $login_limit['login_limit'])}
+                                                {:build_radios('login_limit', ['1'=>__('On'),'0'=>__('Off')], $login_limit['login_limit'])}
                                             </td>
                                         </tr>
                                         {if condition="$login_limit['login_limit'] eq 1"}
                                         <tr>
-                                            <td class="tdleft">用户登录密码错误：</td>
+                                            <td class="tdleft">{:__('Allow password error')}：</td>
                                             <td class="tdright">
                                                 <input class="layui-input" type="text" name="error_count" value="3">
-                                                次
+                                               {:__('Counts')}
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td class="tdleft">冻结账号登录：</td>
+                                            <td class="tdleft">{:__('Freeze account login')}：</td>
                                             <td class="tdright">
-                                                <input class="layui-input" type="text" name="login_time_limit" value="10">分钟
+                                                <input class="layui-input" type="text" name="login_time_limit" value="10">{:__('Minute')}
                                             </td>
                                         </tr>
                                         {else /}
                                         <tr>
-                                            <td class="tdleft">用户登录密码错误：</td>
+                                            <td class="tdleft">{:__('Allow password error')}：</td>
                                             <td class="tdright">
                                                 <input class="layui-input" type="text" name="error_count" value="{$login_limit['error_count']}">
-                                                次
+                                                {:__('Counts')}
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td class="tdleft">冻结账号登录：</td>
+                                            <td class="tdleft">{:__('Freeze account login')}：</td>
                                             <td class="tdright">
-                                                <input class="layui-input" type="text" name="login_time_limit" value="{$login_limit['login_time_limit']}">分钟
+                                                <input class="layui-input" type="text" name="login_time_limit" value="{$login_limit['login_time_limit']}">{:__('Minute')}
                                             </td>
                                         </tr>
                                         {/if}
@@ -107,8 +107,8 @@
                                 </table>
                                 <div class="layui-form-item">
                                     <div class="footer footer-common">
-                                        <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">保存</button>
-                                        <button type="reset" class="layui-btn layui-btn-sm">重置</button>
+                                        <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                        <button type="reset" class="layui-btn layui-btn-sm">{:__('Reset')}</button>
                                     </div>
                                 </div>
                             </form>
