系统管理翻译

--- a/application/admin/view/system/base_info.html
+++ b/application/admin/view/system/base_info.html
@@ -26,7 +26,7 @@
                                 <tbody>
                                     {volist name="server_info" id="vo"}
                                     <tr>
-                                    <td class="tdleft">{$system_info[$key]}</td><td class="tdright">{$vo}</td>
+                                    <td class="tdleft">{$key}</td><td class="tdright">{$vo}</td>
                                     </tr>
                                     {/volist}
                                 </tbody>
