--- a/application/admin/view/database/index.html
+++ b/application/admin/view/database/index.html
@@ -83,7 +83,7 @@
 
 <!--头工具栏-->
 {:build_toolbar('toolbar',['refresh','del'],
-['dumpdata' => ['layui-btn layui-btn-sm', 'layui-icon layui-icon-circle', '数据库备份']]
+['dumpdata' => ['layui-btn layui-btn-sm', 'layui-icon layui-icon-circle', __('Database backup')]]
 )}
 <!--<script type="text/html" id="toolbar">-->
 <!--<div class="layui-btn-container">-->
