--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -27,49 +27,49 @@
                                         </colgroup>
                                         <tbody>
                                     <tr>
-                                        <td class="tdleft">邮件发送方式<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('Mail delivery method')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             {:build_select('mail_smtp_send_type', $send_type_list, $email_config['mail_smtp_send_type'], ['data-rule'=>'required'])}
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tdleft">SMTP服务器<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('SMTP server')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             <input type="text" name="mail_smtp_host" id="mail_smtp_host" autocomplete="off" value="{$email_config['mail_smtp_host']}" data-rule="required" placeholder="" class="layui-input">
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tdleft">SMTP端口<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('SMTP port')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             <input type="mail_smtp_port" name="mail_smtp_port" placeholder="" value="{$email_config['mail_smtp_port']}" data-rule="required" autocomplete="off" class="layui-input">
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tdleft">SMTP用户名<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('SMTP username')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             <input type="mail_smtp_user" name="mail_smtp_user" placeholder="" value="{$email_config['mail_smtp_user']}" autocomplete="off" data-rule="required" class="layui-input">
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tdleft">SMTP密码<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('SMTP password')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             <input type="mail_smtp_pass" name="mail_smtp_pass" placeholder="" value="{$email_config['mail_smtp_pass']}" autocomplete="off" data-rule="required" class="layui-input">
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tdleft">SMTP验证方式<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('SMTP Ways of identifying')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             {:build_select('mail_smtp_check_type', $mail_type_list, $email_config['mail_smtp_check_type'], ['data-rule'=>'required'])}
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tdleft">发件人邮箱<span class="tips">*</span></td>
+                                        <td class="tdleft">{:__('Sender email')}<span class="tips">*</span></td>
                                         <td class="tdright">
                                             <input type="mail_from" name="mail_from" placeholder="" value="{$email_config['mail_from']}" autocomplete="off" data-rule="required" class="layui-input">
                                         </td>
@@ -80,8 +80,8 @@
                                 <div class="layui-form-item">
                                     <div class="layui-input-block">
                                         <div class="footer footer-common">
-                                            <button class="layui-btn layui-btn-sm" type="submit" lay-submit="" lay-filter="component-form-element">保存</button>
-                                            <button type="reset" class="layui-btn  layui-btn-sm">重置</button>
+                                            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                            <button type="reset" class="layui-btn layui-btn-sm">{:__('Reset')}</button>
                                         </div>
                                     </div>
                                 </div>
